# stepwise

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  motivation.md
benches/: bisection_criterion.rs  bisection_iai.rs
examples/: adaptive.rs  dynamic.rs  progress_bar.rs  usage.rs
src/: algo.rs  driver.rs  example_usage.rs  examples.rs  lib.rs  math.rs  metrics.rs  problems.rs  progress_bar.rs  rng.rs  step.rs
src/algos/: bisection.rs  gradient_descent.rs  mod.rs
src/drive/: checkpointing.rs  driver.rs  dynamic.rs  mod.rs  step.rs
src/samplers/: mod.rs  progress_bar.rs  sample_deque.rs  sample_vec.rs  tabulate.rs
tests/: test_checkpoint.rs  test_driver.rs  test_type_erased.rs
tests/common/: mod.rs
