[package]
name = "stepwise"
version = "0.1.0"
edition = "2021"
authors = ["andy watkins <andy@webcalculator.com>"]
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "a numeric library"
repository = "https://github.com/akanalytics/stepwise"
homepage = "https://github.com/akanalytics/stepwise"
readme = "README.md"
keywords = ["math", "solver", "optimization"]
categories = ["mathematics", "algorithms"]

[dependencies]
rand = "0.9.0"
log = { version = "0.4", features = ["release_max_level_debug"] }

[dev-dependencies]
rand_core = "0.9.3"
env_logger = "0.11.7"
test-log = { version = "0.2", features = ["trace"] }
rand_pcg = "0.9.0"



[lints]

